# chopra

./: pyproject.toml
chopra/: __init__.py  chopra.py  sopel_chopra.py
chopra/data_files/: adjective.txt  noun.txt  scientist.txt  sentence.txt  verb.txt
